--- a/features/template/intro/index.html
+++ b/features/template/intro/index.html
@@ -4,20 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="zend-expressive: PSR-7 Middleware Microframework">   
-    <link rel="shortcut icon" href="./img/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <link rel="shortcut icon" href="../../../img/favicon.ico">
 
-    <title>Expressive</title>
+    <title>Introduction - Expressive</title>
 
-    <link href="./css/bootstrap-custom.min.css" rel="stylesheet">
+    <link href="../../../css/bootstrap-custom.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/font-hack/2.018/css/hack.min.css">
     <link href='//fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin-ext,latin' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,600,700&subset=latin-ext,latin' rel='stylesheet' type='text/css'>
-    <link href="./css/base.css" rel="stylesheet">
-    <link href="./css/cinder.css" rel="stylesheet">
-    <link href="./css/prism-zf.css" rel="stylesheet">
+    <link href="../../../css/base.css" rel="stylesheet">
+    <link href="../../../css/cinder.css" rel="stylesheet">
+    <link href="../../../css/prism-zf.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -37,7 +36,7 @@
     
 </head>
 
-<body class="homepage" >
+<body>
 
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
@@ -55,7 +54,7 @@
             
 
             <!-- Main title -->
-            <a class="navbar-brand" href=".">Expressive</a>
+            <a class="navbar-brand" href="../../..">Expressive</a>
         </div>
 
         <!-- Expanded navigation -->
@@ -65,8 +64,8 @@
                 <ul class="nav navbar-nav">
                 
                 
-                    <li class="active">
-                        <a href=".">Home</a>
+                    <li >
+                        <a href="../../..">Home</a>
                     </li>
                 
                 
@@ -77,19 +76,19 @@
                         
                             
 <li >
-    <a href="getting-started/features/">Overview and Features</a>
+    <a href="../../../getting-started/features/">Overview and Features</a>
 </li>
 
                         
                             
 <li >
-    <a href="getting-started/standalone/">Quick Start: Standalone</a>
+    <a href="../../../getting-started/standalone/">Quick Start: Standalone</a>
 </li>
 
                         
                             
 <li >
-    <a href="getting-started/skeleton/">Quick Start: Skeleton Installer</a>
+    <a href="../../../getting-started/skeleton/">Quick Start: Skeleton Installer</a>
 </li>
 
                         
@@ -98,13 +97,13 @@
                 
                 
                 
-                    <li class="dropdown">
+                    <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Features <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                         
                             
 <li >
-    <a href="features/application/">Applications</a>
+    <a href="../../application/">Applications</a>
 </li>
 
                         
@@ -115,31 +114,31 @@
         
             
 <li >
-    <a href="features/container/intro/">Introduction</a>
+    <a href="../../container/intro/">Introduction</a>
 </li>
 
         
             
 <li >
-    <a href="features/container/factories/">Container Factories</a>
+    <a href="../../container/factories/">Container Factories</a>
 </li>
 
         
             
 <li >
-    <a href="features/container/zend-servicemanager/">Using zend-servicemanager</a>
+    <a href="../../container/zend-servicemanager/">Using zend-servicemanager</a>
 </li>
 
         
             
 <li >
-    <a href="features/container/pimple/">Using Pimple</a>
+    <a href="../../container/pimple/">Using Pimple</a>
 </li>
 
         
             
 <li >
-    <a href="features/container/aura-di/">Using Aura.Di</a>
+    <a href="../../container/aura-di/">Using Aura.Di</a>
 </li>
 
         
@@ -154,49 +153,49 @@
         
             
 <li >
-    <a href="features/router/intro/">Introduction</a>
+    <a href="../../router/intro/">Introduction</a>
 </li>
 
         
             
 <li >
-    <a href="features/router/interface/">Routing Interface</a>
+    <a href="../../router/interface/">Routing Interface</a>
 </li>
 
         
             
 <li >
-    <a href="features/router/uri-generation/">URI Generation</a>
+    <a href="../../router/uri-generation/">URI Generation</a>
 </li>
 
         
             
 <li >
-    <a href="features/router/result-observers/">Route Result Observers</a>
+    <a href="../../router/result-observers/">Route Result Observers</a>
 </li>
 
         
             
 <li >
-    <a href="features/router/piping/">Routing vs Piping</a>
+    <a href="../../router/piping/">Routing vs Piping</a>
 </li>
 
         
             
 <li >
-    <a href="features/router/aura/">Using Aura</a>
+    <a href="../../router/aura/">Using Aura</a>
 </li>
 
         
             
 <li >
-    <a href="features/router/fast-route/">Using FastRoute</a>
+    <a href="../../router/fast-route/">Using FastRoute</a>
 </li>
 
         
             
 <li >
-    <a href="features/router/zf2/">Using the ZF2 Router</a>
+    <a href="../../router/zf2/">Using the ZF2 Router</a>
 </li>
 
         
@@ -210,38 +209,38 @@
     <ul class="dropdown-menu">
         
             
-<li >
-    <a href="features/template/intro/">Introduction</a>
+<li class="active">
+    <a href="./">Introduction</a>
 </li>
 
         
             
 <li >
-    <a href="features/template/interface/">Template Renderer Interface</a>
+    <a href="../interface/">Template Renderer Interface</a>
 </li>
 
         
             
 <li >
-    <a href="features/template/middleware/">Templated Middleware</a>
+    <a href="../middleware/">Templated Middleware</a>
 </li>
 
         
             
 <li >
-    <a href="features/template/plates/">Using Plates</a>
+    <a href="../plates/">Using Plates</a>
 </li>
 
         
             
 <li >
-    <a href="features/template/twig/">Using Twig</a>
+    <a href="../twig/">Using Twig</a>
 </li>
 
         
             
 <li >
-    <a href="features/template/zend-view/">Using zend-view</a>
+    <a href="../zend-view/">Using zend-view</a>
 </li>
 
         
@@ -251,7 +250,7 @@
                         
                             
 <li >
-    <a href="features/error-handling/">Error Handling</a>
+    <a href="../../error-handling/">Error Handling</a>
 </li>
 
                         
@@ -262,25 +261,25 @@
         
             
 <li >
-    <a href="features/helpers/intro/">Introduction</a>
+    <a href="../../helpers/intro/">Introduction</a>
 </li>
 
         
             
 <li >
-    <a href="features/helpers/url-helper/">UrlHelper</a>
+    <a href="../../helpers/url-helper/">UrlHelper</a>
 </li>
 
         
             
 <li >
-    <a href="features/helpers/server-url-helper/">ServerUrlHelper</a>
+    <a href="../../helpers/server-url-helper/">ServerUrlHelper</a>
 </li>
 
         
             
 <li >
-    <a href="features/helpers/body-parse/">Body Parsing Middleware</a>
+    <a href="../../helpers/body-parse/">Body Parsing Middleware</a>
 </li>
 
         
@@ -290,7 +289,7 @@
                         
                             
 <li >
-    <a href="features/emitters/">Emitters</a>
+    <a href="../../emitters/">Emitters</a>
 </li>
 
                         
@@ -305,67 +304,67 @@
                         
                             
 <li >
-    <a href="cookbook/common-prefix-for-routes/">Prepending a common path to all routes</a>
+    <a href="../../../cookbook/common-prefix-for-routes/">Prepending a common path to all routes</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/route-specific-pipeline/">Route-specific middleware pipelines</a>
+    <a href="../../../cookbook/route-specific-pipeline/">Route-specific middleware pipelines</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/custom-404-page-handling/">Setting custom 404 page handling</a>
+    <a href="../../../cookbook/custom-404-page-handling/">Setting custom 404 page handling</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/using-custom-view-helpers/">Registering custom view helpers when using zend-view</a>
+    <a href="../../../cookbook/using-custom-view-helpers/">Registering custom view helpers when using zend-view</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/using-zend-form-view-helpers/">Using zend-form view helpers</a>
+    <a href="../../../cookbook/using-zend-form-view-helpers/">Using zend-form view helpers</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/using-a-base-path/">Using Expressive from a subdirectory</a>
+    <a href="../../../cookbook/using-a-base-path/">Using Expressive from a subdirectory</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/modular-layout/">Building modular applications</a>
+    <a href="../../../cookbook/modular-layout/">Building modular applications</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/setting-locale-depending-routing-parameter/">Setting a locale based on a routing parameter</a>
+    <a href="../../../cookbook/setting-locale-depending-routing-parameter/">Setting a locale based on a routing parameter</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/setting-locale-without-routing-parameter/">Setting a locale without a routing parameter</a>
+    <a href="../../../cookbook/setting-locale-without-routing-parameter/">Setting a locale without a routing parameter</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/debug-toolbars/">Enabling debug toolbars</a>
+    <a href="../../../cookbook/debug-toolbars/">Enabling debug toolbars</a>
 </li>
 
                         
                             
 <li >
-    <a href="cookbook/using-routed-middleware-class-as-controller/">Handling multiple routes in a single class</a>
+    <a href="../../../cookbook/using-routed-middleware-class-as-controller/">Handling multiple routes in a single class</a>
 </li>
 
                         
@@ -380,13 +379,13 @@
                         
                             
 <li >
-    <a href="reference/usage-examples/">Examples</a>
+    <a href="../../../reference/usage-examples/">Examples</a>
 </li>
 
                         
                             
 <li >
-    <a href="reference/expressive-projects/">Expressive Projects</a>
+    <a href="../../../reference/expressive-projects/">Expressive Projects</a>
 </li>
 
                         
@@ -397,7 +396,7 @@
         
             
 <li >
-    <a href="reference/migration/rc-to-v1/">From RC5 and Earlier</a>
+    <a href="../../../reference/migration/rc-to-v1/">From RC5 and Earlier</a>
 </li>
 
         
@@ -419,13 +418,13 @@
                     </a>
                 </li>
                 
-                    <li class="disabled">
-                        <a rel="next" >
+                    <li >
+                        <a rel="next" href="../../router/zf2/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="getting-started/features/">
+                        <a rel="prev" href="../interface/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -450,45 +449,43 @@
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
-        <li class="main active"><a href="#expressive-psr-7-middleware-in-minutes">Expressive: PSR-7 Middleware in Minutes</a></li>
+        <li class="main active"><a href="#templating">Templating</a></li>
         
     
     </ul>
 </div></div>
         <div class="col-md-9" role="main">
 
-<h1 id="expressive-psr-7-middleware-in-minutes">Expressive: PSR-7 Middleware in Minutes</h1>
-<p>Expressive builds on <a href="https://github.com/zendframework/zend-stratigility">Stratigility</a>
-to provide a minimalist <a href="http://www.php-fig.org/psr/psr-7/">PSR-7</a> middleware
-framework for PHP, with the following features:</p>
+<h1 id="templating">Templating</h1>
+<p>By default, no middleware in Expressive is templated. We do not even
+provide a default templating engine, as the choice of templating engine is often
+very specific to the project and/or organization.</p>
+<p>We do, however, provide abstraction for templating via the interface
+<code>Zend\Expressive\Template\TemplateRendererInterface</code>, which allows you to write
+middleware that is engine-agnostic. For Expressive, this means:</p>
 <ul>
-<li>Routing. Choose your own router; we support:<ul>
-<li><a href="https://github.com/auraphp/Aura.Router">Aura.Router</a></li>
-<li><a href="https://github.com/nikic/FastRoute">FastRoute</a></li>
-<li><a href="https://github.com/zendframework/zend-mvc">ZF2's MVC router</a></li>
+<li>All adapters MUST support template namespacing. Namespaces MUST be referenced
+  using the notation <code>namespace::template</code> when rendering.</li>
+<li>Adapters MUST allow rendering templates that omit the extension; they will, of
+  course, resolve to whatever default extension they require (or as configured).</li>
+<li>Adapters SHOULD allow passing an extension in the template name, but how that
+  is handled is left up to the adapter.</li>
+<li>Adapters SHOULD abstract layout capabilities. Many templating systems provide
+  this out of the box, or similar, compatible features such as template
+  inheritance. This should be transparent to end-users; they should be able to
+  simply render a template and assume it has the full content to return.</li>
 </ul>
-</li>
-<li>DI Containers, via <a href="https://github.com/container-interop/container-interop">container-interop</a>.
-  All middleware composed in Expressive may be retrieved from the composed
-  container.</li>
-<li>Optionally, templating. We support:<ul>
-<li><a href="http://platesphp.com/">Plates</a></li>
-<li><a href="http://twig.sensiolabs.org/">Twig</a></li>
-<li><a href="https://github.com/zendframework/zend-view">ZF2's PhpRenderer</a></li>
+<p>In this documentation, we'll detail the features of this interface, the various
+implementations we provide, and how you can configure, inject, and consume
+templating in your middleware.</p>
+<p>We currently support:</p>
+<ul>
+<li><a href="../plates/">Plates</a></li>
+<li><a href="../twig/">Twig</a></li>
+<li><a href="../zend-view/">zend-view</a></li>
 </ul>
-</li>
-<li>Error handling. Create templated error pages, or use tools like
-  <a href="https://github.com/filp/whoops">whoops</a> for debugging purposes.</li>
-<li>Nested middleware applications. Write an application, and compose it later
-  in another, optionally under a separate subpath.</li>
-<li><a href="getting-started/skeleton/">Simplfied installation</a>. Our custom
-  <a href="https://getcomposer.org">Composer</a>-based installer prompts you for your
-  initial stack choices, giving you exactly the base you want to start from.</li>
-</ul>
-<p>Essentially, Expressive allows <em>you</em> to develop using the tools <em>you</em> prefer,
-and provides minimal structure and facilities to ease your development.</p>
-<p><a href="getting-started/features/">Keep reading</a>, and get started writing your first
-middleware application today!</p></div>
+<p>Each has an associated container factory; details are found in the
+<a href="../../container/factories/">factories documentation</a>.</p></div>
         
     </div>
 
@@ -500,12 +497,12 @@ middleware application today!</p></div>
         <p><small><a href="http://framework.zend.com">Learn more about Zend Framework</a></small></p>
     </footer>
 
-    <script src="./js/jquery-1.10.2.min.js"></script>
-    <script src="./js/bootstrap-3.0.3.min.js"></script>
-    <script src="./js/prism-zf.js"></script>
+    <script src="../../../js/jquery-1.10.2.min.js"></script>
+    <script src="../../../js/bootstrap-3.0.3.min.js"></script>
+    <script src="../../../js/prism-zf.js"></script>
 
-    <script data-main="./mkdocs/js/search.js" src="./mkdocs/js/require.js"></script>
-    <script src="./js/base.js"></script>
+    <script data-main="../../../mkdocs/js/search.js" src="../../../mkdocs/js/require.js"></script>
+    <script src="../../../js/base.js"></script>
 
     <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="Search Modal" aria-hidden="true">
         <div class="modal-dialog">
@@ -537,8 +534,3 @@ middleware application today!</p></div>
     </body>
 
 </html>
-
-<!--
-MkDocs version : 0.14.0
-Build Date UTC : 2016-01-21 23:21:15.617567
--->
