Updated with pager at bottom of content

--- a/features/template/interface/index.html
+++ b/features/template/interface/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../intro/">
+                        <a rel="prev" href="../intro/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../middleware/">
+                        <a rel="next" href="../middleware/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -643,7 +643,20 @@ cases, the implementation will indicate its behavior when default parameters
 are specified, but a given <code>$params</code> argument does not support it.</p>
 <p>At the time of writing, each of the Plates, Twig, and zend-view
 implementations support the feature.</p>
-</blockquote></div>
+</blockquote>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../intro/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../middleware/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
