--- a/features/template/intro/index.html
+++ b/features/template/intro/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../../router/zf2/">
+                        <a rel="prev" href="../../router/zf2/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../interface/">
+                        <a rel="next" href="../interface/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -500,7 +500,20 @@ templating in your middleware.</p>
 <li><a href="../zend-view/">zend-view</a></li>
 </ul>
 <p>Each has an associated container factory; details are found in the
-<a href="../../container/factories/">factories documentation</a>.</p></div>
+<a href="../../container/factories/">factories documentation</a>.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../../router/zf2/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../interface/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
