--- a/features/template/twig/index.html
+++ b/features/template/twig/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../plates/">
+                        <a rel="prev" href="../plates/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../zend-view/">
+                        <a rel="next" href="../zend-view/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -587,7 +587,20 @@ Generates: http://example.com/path/to/asset/name.ext?v=3</code></pre>
             'ga_tracking' =&gt; 'UA-XXXXX-X'
         ],
     ],
-];</code></pre></div>
+];</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../plates/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../zend-view/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
