--- a/features/template/middleware/index.html
+++ b/features/template/middleware/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../interface/">
+                        <a rel="prev" href="../interface/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../plates/">
+                        <a rel="next" href="../plates/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -564,7 +564,20 @@ class EntryMiddleware
 <pre class="codehilite"><code class="language-php">$response-&gt;getBody()-&gt;write($this-&gt;templateRenderer-&gt;render('blog::entry', [
     'entry' =&gt; $entry,
 ]));
-return $response;</code></pre></div>
+return $response;</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../interface/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../plates/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
