--- a/features/template/plates/index.html
+++ b/features/template/plates/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../middleware/">
+                        <a rel="prev" href="../middleware/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../twig/">
+                        <a rel="next" href="../twig/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -512,7 +512,20 @@ $plates-&gt;addFolder('error', 'templates/error/');
 $plates-&gt;loadExtension(new CustomExtension();
 
 // Inject:
-$renderer = new PlatesRenderer($plates);</code></pre></div>
+$renderer = new PlatesRenderer($plates);</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../middleware/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../twig/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
