--- a/features/template/zend-view/index.html
+++ b/features/template/zend-view/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../twig/">
+                        <a rel="prev" href="../twig/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../../error-handling/">
+                        <a rel="next" href="../../error-handling/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -632,7 +632,20 @@ integrate with PSR-7. These include:</p>
   service; this allows you to inject it into middleware and add variables to it.</li>
 <li>While we support passing the layout as a rendering parameter, be aware that if
   you change engines, this may not be supported.</li>
-</ul></div>
+</ul>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../twig/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../../error-handling/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
