Updated with ZF navbar logo and favicon

--- a/features/template/middleware/index.html
+++ b/features/template/middleware/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="shortcut icon" href="../../../img/favicon.ico">
 
     <title>Templated Middleware - Expressive</title>
@@ -54,7 +54,10 @@
             
 
             <!-- Main title -->
-            <a class="navbar-brand" href="../../..">Expressive</a>
+            <span class="navbar-brand">
+              <a href="http://framework.zend.com"><img src="../../../img/zf-logo-mark.png" height="28" alt="Zend Framework" /></a>
+              <a href="../../..">Expressive</a>
+            </span>
         </div>
 
         <!-- Expanded navigation -->
