--- a/css/cinder.css
+++ b/css/cinder.css
@@ -104,8 +104,65 @@ pre {
     color: #343838;
     height: 45px;
 }
-/*
-footer > hr {
-    width: 35%;
+
+.jumbotron {
+  background-color: #66FFCC;
 }
-*/
+
+.features .panel-content {
+  padding: 0.5em;
+  text-align: center;
+}
+
+.features .panel-content img {
+  height: 128px;
+}
+
+.install .panel {
+  background-color: #B3FFFF;
+}
+
+.install .panel-content {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+/* Grid layout for homepage
+ * Source: http://www.bootply.com/126437
+ */
+.row-flex, .row-flex > div[class*='col-'] {  
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex:1 1 auto;
+}
+
+.row-flex-wrap {
+    -webkit-flex-flow: row wrap;
+    align-content: flex-start;
+    flex:0;
+}
+
+.row-flex > div[class*='col-'], .container-flex > div[class*='col-'] {
+    margin:-.2px; /* hack adjust for wrapping */
+}
+
+.container-flex > div[class*='col-'] div,.row-flex > div[class*='col-'] div {
+    width:100%;
+}
+
+
+.flex-col {
+    display: flex;
+    display: -webkit-flex;
+    flex: 1 100%;
+    flex-flow: column nowrap;
+}
+
+.flex-grow {
+    display: flex;
+    -webkit-flex: 2;
+    flex: 2;
+}
