--- a/docs/book/css/zend-expressive.css
+++ b/docs/book/css/zend-expressive.css
@@ -1,23 +1,7 @@
-.features .panel-content {
-  padding: 0.5em;
-  text-align: center;
+.features .row {
+    min-height: 330px;
 }
 
-.features .panel-content img {
-  height: 128px;
-}
-
-.screenshot {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.jumbotron {
-  background-color: #68b604;
-  color: white;
-}
-
-.content .jumbotron h1 {
-  color: white;
-  border-bottom: 0;
+.features img {
+    height: 128px;
 }
